Bug 84679 - FILEOPEN: RTF - paragraph level spacing not imported
Summary: FILEOPEN: RTF - paragraph level spacing not imported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.4.0 target:4.3.4
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2014-10-05 07:57 UTC by Luke
Modified: 2015-12-17 12:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Simple RTF document showing problem with line spacing (44.19 KB, application/rtf)
2014-10-05 07:57 UTC, Luke
Details
original DOCX imports correctly. Above & Below spacing:0 (11.60 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-10-05 08:10 UTC, Luke
Details
Comparision of Word vs Writer (177.46 KB, image/png)
2014-10-09 08:33 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2014-10-05 07:57:09 UTC
Created attachment 107346 [details]
Simple RTF document showing problem with line spacing

Steps to reproduce:
1. Create a table in Word with 0 line spacing above and below
2. Save as RFT
3. Open with Writer

Expected results:
Writer import a single spaced table

Actual results:
Table is 1.5 spaced. Writer adds Paragraph->Indent&Spacing->Spacing->Below Paragraph: .51 Lines. 

If Below Paragraph: .51 Lines is changed to Zero, the table is displayed properly.
Comment 1 Luke 2014-10-05 08:10:54 UTC
Created attachment 107347 [details]
original DOCX imports correctly. Above & Below spacing:0
Comment 2 Yousuf Philips (jay) (retired) 2014-10-09 08:21:26 UTC
Confirmed in 3.3.0, 3.6.7 and master. From what i can see, left and right table spacing to content is 0.08" in docx and 0.00" in reopened rtf, which is a rtf filesave issue.

Version: 4.4.0.0.alpha0+
Build ID: ced24ffba2fa1754c466b7944b0ee06d21292706
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-10-04_21:36:54
Comment 3 Luke 2014-10-09 08:33:23 UTC
Created attachment 107597 [details]
Comparision of Word vs Writer

Note the paragraphs options. The importer adds an extra .51 line
Comment 4 Yousuf Philips (jay) (retired) 2014-10-09 08:43:31 UTC
Sorry Luke, I was mistakenly saving the .docx file to rtf in writer and then reopening it. :) Filed another bug for that one (bug 84832).

Confirmed that this is a regression, as it works correctly in 4.2.6. Broken in 4.3.3 and master.

Version: 4.3.3.0.0+
Build ID: 18b9cb260a5ec358f6a7b73362bbc306af0417b1
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:libreoffice-4-3, Time: 2014-10-04_04:41:44

Version: 4.4.0.0.alpha0+
Build ID: ced24ffba2fa1754c466b7944b0ee06d21292706
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-10-04_21:36:54
Comment 5 Miklos Vajna 2014-10-10 14:15:32 UTC
I see the problem. Sounds like in buffered content (like tables) we don't do the proper hard formatting deduplication. If this sounds Chinese, see commit 1be0a3fa9ebb22b607c54b47739d4467acfed259. ;-)
Comment 7 Miklos Vajna 2014-10-11 10:26:45 UTC
libreoffice-4-3 review: https://gerrit.libreoffice.org/11914
Comment 9 Robinson Tryon (qubit) 2015-12-17 12:53:14 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Remove redundant rtf_filter.
[NinjaEdit]