fdo#84679 RTF import: fix paragraph spacing handling in tables

Regression from commit 1be0a3fa9ebb22b607c54b47739d4467acfed259
(n#825305: writerfilter RTF import: override style properties like Word,
2014-06-17), we failed to do the proper deduplication in buffered
content, like tables. Fix this by adapting
RTFDocumentImpl::replayBuffer() to RTFDocumentImpl::checkNeedPap(),
which already did the proper deduplication.

To be fair, the inconsistency was there earlier since
9f5263c477b82fef5aa9c3e79fb6af92aa049e24 (fdo#44736 RTF import: ignore
direct formatting which equals to style, 2012-11-25), but it caused no
real harm earlier.

(cherry picked from commit e34906d20c9febc420b115fa2a8b171826dea0be)

Conflicts:

	sw/qa/extras/rtfimport/rtfimport.cxx
	writerfilter/source/rtftok/rtfdocumentimpl.cxx

Change-Id: I0673408088d9d83768f0780ea92ece87913d03f3
(cherry picked from commit 7d799ae51e9b97bb27ade082b670d3c1c5b1465c)